--- a/Spark/spark shuffle理解.ipynb
+++ b/Spark/spark shuffle理解.ipynb
@@ -14,126 +14,76 @@
     "* Spark 1.6 Tungsten-sort并入Sort Based Shuffle\n",
     "* Spark 2.0 Hash Based Shuffle退出历史舞台\n",
     "\n",
-    "[https://tech.youzan.com/spark_memory_1/](https://tech.youzan.com/spark_memory_1/)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### $\\S$1. Sort Shuffle\n",
-    "#### 一. 普通sortshuffle\n",
-    "SortShuffleManager的运行机制主要分成两种:\n",
-    "* 一种是普通运行机制\n",
-    "* 另一种是bypass运行机制。  \n",
-    "  当shuffle read task的数量小于等于spark.shuffle.sort.bypassMergeThreshold参数的值时（默认为200），就会启用bypass机制。\n",
+    "### 一. Shuffle过程\n",
     "\n",
-    "普通运行机制 : \n",
-    "　　数据会先写入一个内存数据结构中，此时根据不同的shuffle算子，可能选用不同的数据结.\n",
-    "* 如果是reduceByKey这种聚合类的shuffle算子，那么会选用Map数据结构，一边通过Map进行聚合，一边写入内存；\n",
-    "* 如果是join这种普通的shuffle算子，那么会选用Array数据结构，直接写入内存。 \n",
-    "\n",
-    "接着，每写一条数据进入内存数据结构之后，就会判断一下，是否达到了某个临界阈值。如果达到临界阈值的话，那么就会尝试将内存数据结构中的数据溢写到磁盘，然后清空内存数据结构。\n",
-    "\n",
-    "　　在溢写到磁盘文件之前，会先根据key对内存数据结构中已有的数据进行排序。排序过后，会分批将数据写入磁盘文件。默认的batch数量是10000条，也就是说，排序好的数据，会以每批1万条数据的形式分批写入磁盘文件。写入磁盘文件是通过Java的BufferedOutputStream实现的。BufferedOutputStream是Java的缓冲输出流，首先会将数据缓冲在内存中，当内存缓冲满溢之后再一次写入磁盘文件中，这样可以减少磁盘IO次数，提升性能。\n",
-    "\n",
-    "　　一个task将所有数据写入内存数据结构的过程中，会发生多次磁盘溢写操作，也就会产生多个临时文件。最后会将之前所有的临时磁盘文件都进行合并，这就是merge过程，此时会将之前所有临时磁盘文件中的数据读取出来，然后依次写入最终的磁盘文件之中。此外，由于一个task就只对应一个磁盘文件，也就意味着该task为下游stage的task准备的数据都在这一个文件中，因此还会单独写一份索引文件，其中标识了下游各个task的数据在文件中的start offset与end offset。\n",
-    "\n",
-    "**该stage中的每个task产生一个文件**\n",
-    "SortShuffleManager由于有一个磁盘文件merge的过程，因此大大减少了文件数量。比如第一个stage有50个task，总共有10个Executor，每个Executor执行5个task，而第二个stage有100个task。由于每个task最终只有一个磁盘文件，因此此时每个Executor上只有5个磁盘文件，所有Executor只有50个磁盘文件。\n",
+    "目前版本的shuffle, 都是使用排序相关的shuffle; 整体上spark shuffle分为shuffle read和shuffle write:   \n",
+    "* **shuffle write阶段**   \n",
+    "  大体上经过排序, 聚合, 归并(多个文件spill磁盘的情况), 最终, 每个task生成2种文件: 数据文件和索引文件. \n",
+    "    * 数据文件: 相同分区的数据在文件内是连续的, \n",
+    "    * 索引文件: 记录了每个分区的开始位置和结束位置  \n",
     "    \n",
-    "#### 二. bypass Sort Shuffle\n",
-    "bypass运行机制的触发条件如下：\n",
-    "* shuffle map task数量小于spark.shuffle.sort.bypassMergeThreshold参数的值。\n",
-    "* 不是聚合类的shuffle算子（比如reduceByKey）。\n",
-    "\n",
-    "　　此时task会为每个下游task都创建一个临时磁盘文件，并将数据按key进行hash然后根据key的hash值，将key写入对应的磁盘文件之中。当然，写入磁盘文件时也是先写入内存缓冲，缓冲写满之后再溢写到磁盘文件的。最后，同样会将所有临时磁盘文件都合并成一个磁盘文件(每个executor只写出一个文件)，并创建一个单独的索引文件。\n",
-    "\n",
-    "　　该过程的磁盘写机制其实跟未经优化的HashShuffleManager是一模一样的，因为都要创建数量惊人的磁盘文件，只是在最后会做一个磁盘文件的合并而已。因此少量的最终磁盘文件，也让该机制相对未经优化的HashShuffleManager来说，shuffle read的性能会更好。\n",
-    "\n",
-    "　　而该机制与普通SortShuffleManager运行机制的不同在于：第一，磁盘写机制不同；第二，不会进行排序。也就是说，启用该机制的最大好处在于，shuffle write过程中，不需要进行数据的排序操作，也就节省掉了这部分的性能开销。"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### $\\S$2. Hash Shuffle\n",
-    "#### 一. 普通hash shuffle\n",
-    "这里我们先明确一个假设前提：每个Executor只有1个CPU core，也就是说，无论这个Executor上分配多少个task线程，同一时间都只能执行一个task线程。\n",
-    "\n",
-    "　　我们先从shuffle write开始说起。shuffle write阶段，主要就是在一个stage结束计算之后，为了下一个stage可以执行shuffle类的算子（比如reduceByKey），而将每个task处理的数据按key进行“分类”。所谓“分类”，就是对相同的key执行hash算法，从而将相同key都写入同一个磁盘文件中，而每一个磁盘文件都只属于下游stage的一个task。在将数据写入磁盘之前，会先将数据写入内存缓冲中，当内存缓冲填满之后，才会溢写到磁盘文件中去。\n",
-    "\n",
-    "　　那么每个执行shuffle write的task，要为下一个stage创建多少个磁盘文件呢？很简单，下一个stage的task有多少个，当前stage的每个task就要创建多少份磁盘文件。比如下一个stage总共有100个task，那么当前stage的每个task都要创建100份磁盘文件。如果当前stage有50个task，总共有10个Executor，每个Executor执行5个Task，那么每个Executor上总共就要创建500个磁盘文件，所有Executor上会创建5000个磁盘文件。由此可见，未经优化的shuffle write操作所产生的磁盘文件的数量是极其惊人的。\n",
-    "\n",
-    "**该stage的每个task都创建下个stage task个数的文件**　　接着我们来说说shuffle read。shuffle read，通常就是一个stage刚开始时要做的事情。此时该stage的每一个task就需要将上一个stage的计算结果中的所有相同key，从各个节点上通过网络都拉取到自己所在的节点上，然后进行key的聚合或连接等操作。由于shuffle write的过程中，task给下游stage的每个task都创建了一个磁盘文件，因此shuffle read的过程中，每个task只要从上游stage的所有task所在节点上，拉取属于自己的那一个磁盘文件即可。\n",
-    "\n",
-    "　　shuffle read的拉取过程是一边拉取一边进行聚合的。每个shuffle read task都会有一个自己的buffer缓冲，每次都只能拉取与buffer缓冲相同大小的数据，然后通过内存中的一个Map进行聚合等操作。聚合完一批数据后，再拉取下一批数据，并放到buffer缓冲中进行聚合操作。以此类推，直到最后将所有数据到拉取完，并得到最终的结果。\n",
     "    \n",
-    "#### 二. 开启优化(consolidate)的hash shuffle\n",
-    "　　这里说的优化，是指我们可以设置一个参数，spark.shuffle.consolidateFiles。该参数默认值为false，将其设置为true即可开启优化机制。通常来说，如果我们使用HashShuffleManager，那么都建议开启这个选项。\n",
-    "\n",
-    "　　开启consolidate机制之后，在shuffle write过程中，task就不是为下游stage的每个task创建一个磁盘文件了。此时会出现shuffleFileGroup的概念，每个shuffleFileGroup会对应一批磁盘文件，磁盘文件的数量与下游stage的task数量是相同的。一个Executor上有多少个CPU core，就可以并行执行多少个task。而第一批并行执行的每个task都会创建一个shuffleFileGroup，并将数据写入对应的磁盘文件内。\n",
+    "* **shuffle read阶段**   \n",
+    "   首先通过网络从各个writer节点获取给定分区的数据, 即数据文件中某一连续区域的数据, 然后再将这些不同节点下的分区文件进行排序, 合并; 最终形成分区下的结果\n",
+    "   \n",
+    "### 二. 三种shuffle writer的过程 \n",
+    "#### 1. BypassMergeSortShuffleWriter   \n",
+    "* BypassMergeSortShuffleWriter实现过程   \n",
+    "  因为, BypassMergeSortShuffleWriter大体实现过程是: 首先为每个分区创建一个分区文件, 将对应的数据写入到各自的分区文件中; 最终合并所有的分区文件形成一个大文件, 且伴随产生一个索引文件记录分区的开始位置和结束位置. 因为这种shuffle不需要进行排序和combine等操作, 因此不会十分消耗内存.\n",
     "  \n",
-    "　　当Executor的CPU core执行完一批task，接着执行下一批task时，下一批task就会复用之前已有的shuffleFileGroup，包括其中的磁盘文件。也就是说，此时task会将数据写入已有的磁盘文件中，而不会写入新的磁盘文件中。因此，consolidate机制允许不同的task复用同一批磁盘文件，这样就可以有效将多个task的磁盘文件进行一定程度上的合并，从而大幅度减少磁盘文件的数量，进而提升shuffle write的性能。\n",
+    "       \n",
+    "* BypassMergeSortShuffleWriter的触发条件有2个: \n",
+    "    1. map task的数量不多: 小于`spark.shuffle.sort.bypassMergeThreshold`值, 默认为200\n",
+    "    2. 非map端聚合的算子: 比如`reduceByKey`就不能使用bypasssertshuffle.\n",
+    "    SortShuffleWriter\n",
+    "    \n",
+    "#### 2. SortShuffleWriter\n",
+    "SortShuffleWriter是日常使用最频繁的shuffle过程; SortShuffleWriter主要使用`ExternalSorter`对数据进行排序, 合并, 聚合(combine). 最后产生数据文件和索引文件\n",
+    "* **首先**, 根据算子是否需要map端进行combine, 数据会被写入到不同的数据结构: \n",
+    "    1. 需要进行combine的算子, 数据写入到`PartitionedAppendOnlyMap`这个map中\n",
+    "    2. 不需要进行combine的算子, 数据写入到`PartitionedPairBuffer`这个数组中\n",
+    "* **然后**, 每个一段时间, 向MemoryManager申请内存\n",
+    "    * 如果可以一直申请到内存, 则`PartitionedAppendOnlyMap`和`PartitionedPairBuffer`中的数据会一直存在于内存中, 可见这两个数据结构很消耗内存.\n",
+    "    * 如果发现申请不到了, 则会把内存中的数据spill到磁盘文件; 在spill到文件之前, 需要先把`PartitionedAppendOnlyMap`和`PartitionedPairBuffer`中的数据和已经spill到磁盘的数据进行合并(使用归并排序合并). `PartitionedAppendOnlyMap`和`PartitionedPairBuffer`内存中的排序算法使用[TimSort]()算法  \n",
+    "* **最后**, 写入文件一般是先把数据写入一个buffer, 再把buffer中的数据写入到文件. 此过程受2个参数控制  \n",
+    "    * [spark.shuffle.file.buffer](#param1)\n",
+    "    * spark.shuffle.spill.batchSize \n",
+    "    \n",
+    "    \n",
+    "#### 3. UnsafeShuffleWriter\n",
+    "`UnsafeShuffleWriter`是`SortShuffleWriter`的优化版本, 大体上相差不大, 从内存角度看, 主要差异为: \n",
+    "* 一方面，在 SortShuffleWriter 的 PartitionedAppendOnlyMap 或者 PartitionedPairBuffer 中，存储的是键值或者值的具体类型，也就是 Java 对象，是反序列化过后的数据。而在 UnsafeShuffleWriter 的 ShuffleExternalSorter 中数据是序列化以后存储到实际的 Page 中，而且在写入数据过程中会额外写入长度信息。总体而言，序列化以后数据大小是远远小于序列化之前的数据。\n",
     "\n",
-    "**每个Executor创建下个stage task个数的文件**\n",
-    "　　假设第二个stage有100个task，第一个stage有50个task，总共还是有10个Executor，每个Executor执行5个task。那么原本使用未经优化的HashShuffleManager时，每个Executor会产生500个磁盘文件，所有Executor会产生5000个磁盘文件的。但是此时经过优化之后，每个Executor创建的磁盘文件的数量的计算公式为：CPU core的数量 * 下一个stage的task数量。也就是说，每个Executor此时只会创建100个磁盘文件，所有Executor只会创建1000个磁盘文件。\n",
-    "    "
+    "* 另一方面，UnsafeShuffleWriter 中需要额外的存储记录（LongArray），它保存着分区信息和实际指向序列化后数据的指针（经过编码的Page num 以及 Offset）。相对于 SortShuffleWriter， UnsafeShuffleWriter 中这部分存储的开销是额外的。\n",
+    "\n",
+    "### 三. Shuffle Read的过程\n",
+    "\n",
+    "#### 1. 数据获取阶段\n",
+    "数据获取分为本地获取和远端获取: \n",
+    "* 本地获取: \n",
+    "   直接从本地的BlockManager获取数据\n",
+    "* 远端获取:  远端获取数据需要走网络, 有一些参数可以控制\n",
+    "    * `spark.reducer.maxSizeInFlight` (默认 48M): 接收buffer的缓冲区大小\n",
+    "    * `spark.reducer.maxReqsInFlight`:   \n",
+    "       限制同时能有多少个远程机器进行拉取本机器文件的请求.随着集群增大，需要对此做出限制。否则可能会使本机负载过大而挂掉。\n",
+    "\n",
+    "#### 2. 拉取的数据进行spill, combine, 合并文件   \n",
+    "   shuffle reader的溢写, 排序和合并文件操作, 与shuffle writer相似, 使用ExternalAppendOnlyMap完成"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### $\\S$3. shuffle相关的参数调优\n",
-    "\n",
-    "**spark.shuffle.file.buffer**\n",
-    "* 默认值：32k\n",
-    "* 参数说明：  \n",
-    "该参数用于设置shuffle write task的BufferedOutputStream的buffer缓冲大小。将数据写到磁盘文件之前，会先写入buffer缓冲中，待缓冲写满之后，才会溢写到磁盘。\n",
-    "* 调优建议：   \n",
-    "如果作业可用的内存资源较为充足的话，可以适当增加这个参数的大小（比如64k），从而减少shuffle write过程中溢写磁盘文件的次数，也就可以减少磁盘IO次数，进而提升性能。在实践中发现，合理调节该参数，性能会有1%~5%的提升。\n",
-    "\n",
-    "**spark.reducer.maxSizeInFlight**\n",
-    "* 默认值：48m\n",
-    "* 参数说明：  \n",
-    "该参数用于设置shuffle read task的buffer缓冲大小，而这个buffer缓冲决定了每次能够拉取多少数据。\n",
-    "* 调优建议：  \n",
-    "如果作业可用的内存资源较为充足的话，可以适当增加这个参数的大小（比如96m），从而减少拉取数据的次数，也就可以减少网络传输的次数，进而提升性能。在实践中发现，合理调节该参数，性能会有1%~5%的提升。\n",
-    "\n",
-    "**spark.shuffle.io.maxRetries**\n",
-    "* 默认值：3\n",
-    "* 参数说明：  \n",
-    "shuffle read task从shuffle write task所在节点拉取属于自己的数据时，如果因为网络异常导致拉取失败，是会自动进行重试的。该参数就代表了可以重试的最大次数。如果在指定次数之内拉取还是没有成功，就可能会导致作业执行失败。\n",
-    "* 调优建议：  \n",
-    "对于那些包含了特别耗时的shuffle操作的作业，建议增加重试最大次数（比如60次），以避免由于JVM的full gc或者网络不稳定等因素导致的数据拉取失败。在实践中发现，对于针对超大数据量（数十亿~上百亿）的shuffle过程，调节该参数可以大幅度提升稳定性。\n",
-    "\n",
-    "**spark.shuffle.io.retryWait**\n",
-    "* 默认值：5s\n",
-    "* 参数说明：具体解释同上，该参数代表了每次重试拉取数据的等待间隔，默认是5s。\n",
-    "* 调优建议：建议加大间隔时长（比如60s），以增加shuffle操作的稳定性。\n",
-    "\n",
-    "**spark.shuffle.memoryFraction**\n",
-    "* 默认值：0.2\n",
-    "* 参数说明：该参数代表了Executor内存中，分配给shuffle read task进行聚合操作的内存比例，默认是20%。\n",
-    "* 调优建议：在资源参数调优中讲解过这个参数。如果内存充足，而且很少使用持久化操作，建议调高这个比例，给shuffle read的聚合操作更多内存，以避免由于内存不足导致聚合过程中频繁读写磁盘。在实践中发现，合理调节该参数可以将性能提升10%左右。\n",
-    "\n",
-    "**spark.shuffle.manager**\n",
-    "* 默认值：sort\n",
-    "* 参数说明：该参数用于设置ShuffleManager的类型。Spark 1.5以后，有三个可选项：hash、sort和tungsten-sort。HashShuffleManager是Spark 1.2以前的默认选项，但是Spark 1.2以及之后的版本默认都是SortShuffleManager了。tungsten-sort与sort类似，但是使用了tungsten计划中的堆外内存管理机制，内存使用效率更高。\n",
-    "* 调优建议：由于SortShuffleManager默认会对数据进行排序，因此如果你的业务逻辑中需要该排序机制的话，则使用默认的SortShuffleManager就可以；而如果你的业务逻辑不需要对数据进行排序，那么建议参考后面的几个参数调优，通过bypass机制或优化的HashShuffleManager来避免排序操作，同时提供较好的磁盘读写性能。这里要注意的是，tungsten-sort要慎用，因为之前发现了一些相应的bug。\n",
-    "\n",
-    "**spark.shuffle.sort.bypassMergeThreshold**\n",
-    "* 默认值：200\n",
-    "* 参数说明：当ShuffleManager为SortShuffleManager时，如果shuffle read task的数量小于这个阈值（默认是200），则shuffle write过程中不会进行排序操作，而是直接按照未经优化的HashShuffleManager的方式去写数据，但是最后会将每个task产生的所有临时磁盘文件都合并成一个文件，并会创建单独的索引文件。\n",
-    "* 调优建议：当你使用SortShuffleManager时，如果的确不需要排序操作，那么建议将这个参数调大一些，大于shuffle read task的数量。那么此时就会自动启用bypass机制，map-side就不会进行排序了，减少了排序的性能开销。但是这种方式下，依然会产生大量的磁盘文件，因此shuffle write性能有待提高。\n",
-    "\n",
-    "**spark.shuffle.consolidateFiles**\n",
-    "* 默认值：false\n",
-    "* 参数说明：如果使用HashShuffleManager，该参数有效。如果设置为true，那么就会开启consolidate机制，会大幅度合并shuffle write的输出文件，对于shuffle read task数量特别多的情况下，这种方法可以极大地减少磁盘IO开销，提升性能。\n",
-    "* 调优建议：如果的确不需要SortShuffleManager的排序机制，那么除了使用bypass机制，还可以尝试将spark.shffle.manager参数手动指定为hash，使用HashShuffleManager，同时开启consolidate机制。在实践中尝试过，发现其性能比开启了bypass机制的SortShuffleManager要高出10%~30%。\n",
-    "\n"
+    "### 四. 什么情况下可能会导致Spark Shuffle阶段发生OOM\n",
+    "* **1. 并发度过高**  \n",
+    " 可能1个Execotor上设置的并发任务书过多 导致每个job分到的内存太少\n",
+    " \n",
+    "* **2. 数据倾斜时, 单个文件过大, 导致拉取到内存后发生OOM**  \n",
+    " 在 Reduce 获取数据时，由于数据倾斜，有可能造成单个 Block 的数据非常的大，默认情况下是需要有足够的内存来保存单个 Block 的数据。因此，此时极有可能因为数据倾斜造成 OOM。 可以设置 spark.maxRemoteBlockSizeFetchToMem 参数，设置这个参数以后，超过一定的阈值，会自动将数据 Spill 到磁盘，此时便可以避免因为数据倾斜造成 OOM 的情况。在我们的生产环境中也验证了这点，在设置这个参数到合理的阈值后，生产环境任务 OOM 的情况大大减少了。\n",
+    " \n",
+    "* **3. spill不及时**  \n",
+    "Spark 目前采用的是抽样统计的方式来计算 MemoryConsumer 已经使用的内存，从而造成堆内内存的实际使用量不是特别准确。从而有可能因为不能及时 Spill 而导致 OOM。"
    ]
   }
  ],
