--- a/Spark/spark面试题.ipynb
+++ b/Spark/spark面试题.ipynb
@@ -17,9 +17,13 @@
     "* spark将1个job划分为多个stage, stage的划分是通过RDD之间的依赖关系判定的; 每个stage产生的结果会存在内存中, 避免多个stage串行的情况下对hdfs的读写请求. 而且spark拥有很多算子, 数据表现力上很强\n",
     "\n",
     "#### 3. RDD中的宽窄依赖? 有什么作用?\n",
-    "* 窄依赖是指父RDD的每个分区都只被子RDD的一个分区所使用。相应的，那么宽依赖就是指父RDD的分区被多个子RDD的分区所依赖。  \n",
+    "* **窄依赖**是指父RDD的每个分区都只被子RDD的一个或几个分区所使用(不是依赖所有的父RDD分区)。  \n",
+    "  **宽依赖**就是指父RDD的分区被多个子RDD的分区所依赖。  \n",
     "  例如，map就是一种窄依赖，而join则会导致宽依赖，主要是看有没有shuffle操作。\n",
     "* 宽窄依赖的作用是用来划分stage。\n",
+    "* 窄依赖分为: \n",
+    "    * `OneToOneDependency`: 子RDD的一个分区只依赖与父RDD的一个分区  \n",
+    "    * `RangeDependency`: 子RDD的一个分区依赖父RDD的多个分区, 这种依赖只在**UnionRDD**所使用。\n",
     "\n",
     "#### 4. cache和persist的区别？\n",
     "它们都是用来进行缓存RDD的。\n",
@@ -51,19 +55,30 @@
    "metadata": {},
    "source": [
     "### 7. kafka\n",
-    "* **Kafka 分布式的情况下，如何保证消息的顺序?**\n",
+    "* **Kafka 分布式的情况下，如何保证消息的顺序?**   \n",
     "  kafka分布式情况下, 数据只能保证局部有序, 不能保证全局有序. 什么意思?\n",
     "    * kafka是划分partition的, 一个partition因为被一个write agead log记录, 因此同一个partition下的数据可以有序; \n",
     "    * 不同partition之间, 不能保证顺序。  \n",
     "      不过绝大多数用户都可以通过 message key 来定义，因为同一个 key 的 message 可以保证只发送到同一个 Partition。  \n",
     "      比如说 key 是 user id，table row id 等等，所以同一个 user 或者同一个 record 的消息永远只会发送到同一个 Partition上，保证了同一个 user 或 record 的顺序。\n",
+    "    * SparkStreaming可以设置手动提交offset, 已处理过的offset可以保存在zookeeper中\n",
     "      \n",
     "      \n",
     "* **Spark streaming 读取kafka数据的两种方式?**   \n",
     "    1. 基于Receiver方式   \n",
     "       需要使用单独的Receiver线程来异步获取Kafka数据。Spark Streaming启动时，会在Executor中同时启动Receiver异步线程用于从Kafka持续获取数据，获取的数据先存储在Receiver中(存储方式由StorageLevel决定)，后续，当Batch Job触发后，这些数据会被转移到剩下的Executor中被处理。处理完毕后，Receiver会自动更新Zookeeper中的Offset。\n",
     "    2. 基于Direct(No Receiver)方式    \n",
-    "       不需要使用单独的Receiver线程从Kafka获取数据。Spark Streaming Batch Job触发时，Driver端确定要读取的Topic-Partition的OffsetRange，然后由Executor并行从Kafka各Partition读取数据并计算。"
+    "       不需要使用单独的Receiver线程从Kafka获取数据。Spark Streaming Batch Job触发时，Driver端确定要读取的Topic-Partition的OffsetRange，然后由Executor并行从Kafka各Partition读取数据并计算。\n",
+    "       \n",
+    "       \n",
+    "* **如果Spark Streaming停掉了，如何保证Kafka的重新运作是合理的呢**   \n",
+    "这主要依赖Spark Streaming的快速故障恢复机制. \n",
+    "    * 传统流处理系统会在其他节点上重启失败的连续算子，这种方法需要等待转移到的节点先处理完之前的任务才能继续执行新任务; \n",
+    "    * 但在Spark Streaming中, 这个节点的任务将均匀地分散到集群中的节点进行计算，相对于传递故障恢复机制能够更快地恢复。\n",
+    "    \n",
+    "    \n",
+    "* **说说Spark Streaming 是如何收集和处理数据的，一句话?**  \n",
+    "在 Spark Streaming 中，数据采集是逐条进行的，而数据处理是按批 mini batch进行的，因此 Spark Streaming 会先设置好批处理间隔 batch duration，当超过批处理间隔就会把采集到的数据汇总起来成为一批数据交给系统去处理。"
    ]
   },
   {
@@ -81,6 +96,8 @@
     "    * 或者可以自定义Partitioner\n",
     "    \n",
     "    \n",
+    "    spark\n",
+    "   比hive快的原因主要有2, 一个是shuffle后的结果可以存储在磁盘中, 另一个是DAG执行计划里, 多个job串联时结果不必回写到HDFS中\n",
     "* **如果是join产生的数据倾斜, 且发现其中有一个表很小**\n",
     "    * 可以将小表通过broadcast广播出去  \n",
     "      这样完全避免了shuffle, 让join完全变成maper端的join\n",
@@ -95,8 +112,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[spark面试题1](https://zhuanlan.zhihu.com/p/49169166)   \n",
-    "[整理spark shuffle](https://tech.youzan.com/spark_memory_1/)"
+    "#### 9. Spark为什么快，Spark SQL 一定比 Hive 快吗\n",
+    "spark比hive快的原因主要有2, 一个是shuffle后的结果可以存储在磁盘中, 另一个是DAG执行计划里, 多个job串联时结果不必回写到HDFS中.   \n",
+    "因此, spark是否比hive快要是有一定条件的, **一个反例**是: 当查询只有1次shuffle操作的时候, hive往往比spark还快, 因为MR的map任务往往生成的更多\n",
+    "```sql\n",
+    "Select month_id, sum(sales) from T group by month_id;  --反例\n",
+    "```\n",
+    "\n",
+    "#### 10. Job 和 Task 怎么理解\n",
+    "* **Job**   \n",
+    "Job来源于每次的action算子, 每用action算子获取一次结果就会生成一个Job, Job提交给DAGScheduler后, 会分解成task和stage\n",
+    "* **Task**  \n",
+    "Task是在每个Executor的CPU上执行的任务, Task 分为 ShuffleMapTask 和 ResultTask 两种\n",
+    "    * ShuffleMapStage 中的 Task 为 ShuffleMapTask\n",
+    "    * ResultStage 中的 Task 为 ResultTask\n",
+    "\n",
+    "\n",
+    "#### 11. Spark作业提交-执行流程是怎么样的\n",
+    "1. `spark-submit` 提交代码后，执行`new SparkContext()`，在`SparkContext`里构造`DAGScheduler`和`TaskScheduler`。\n",
+    "2. `DAGScheduler`为1个Job生成多个Stage(stage分为ShuffleMapStage和ResultStage), 每个Stage创建一个`TaskSet`. \n",
+    "3. `TaskScheduler`会把每一个`TaskSet`里的`Task`，提交到`Executor`上执行。\n",
+    "4. Executor上有线程池(CachedTHreadPool), 每收到一个Task. 先封装成RunnerTask, 再从线程池中取出一个线程执行这个Task\n",
+    "\n",
+    "#### 12. Spark UDF?\n",
+    "* Spark SQL UDF 其实是一个**Scala函数**，被catalyst封装成一个 Expression 结点，最后通过 eval 方法计根据当前 Row 计算 UDF 的结果。\n",
+    "* UDF 对表中的单行进行转换，以便为每行生成单个对应的输出值。\n",
+    "* 执行步骤: \n",
+    "    * 1. 定义函数\n",
+    "    * 2. 将函数注册为UDF  \n",
+    "    以下示例代码使用 SQL 别名为 CTOF 来注册我们的转换 UDF，然后在 SQL 查询使用它来转换每个城市的温度。\n",
+    "    \n",
+    "    ```scala\n",
+    "    val df = sqlContext.read.json(\"temperatures.json\")\n",
+    "    df.registerTempTable(\"citytemps\")\n",
+    "    // Register the UDF with our SQLContext\n",
+    "\n",
+    "    sqlContext.udf.register(\"CTOF\", (degreesCelcius: Double) => ((degreesCelcius * 9.0 / 5.0) + 32.0))\n",
+    "    sqlContext.sql(\"SELECT city, CTOF(avgLow) AS avgLowF, CTOF(avgHigh) AS avgHighF FROM citytemps\").show()\n",
+    "\n",
+    "    ```\n",
+    "* Spark SQL定义了`UDF1`到`UDF22`共22个类，UDF 最多支持22个输入参数。\n",
+    "\n",
+    "#### 13. Spark UDAF?\n",
+    "* 用户定义的聚合函数（User-defined aggregate functions, UDAF）同时处理多行，并且返回一个结果，通常结合使用 GROUP BY 语句（例如 COUNT 或 SUM）。为了简单起见，我们将实现一个叫 SUMPRODUCT 的 UDAF 来计算以库存来分组的所有车辆零售价值  \n",
+    "* 使用方法: 通过扩展`UserDefinedAggregateFunction`类使用  \n",
+    " 下面例子中我们定义了一个名为 SumProductAggregateFunction 的类，并且为它取了一个名为 SUMPRODUCT 的别名\n",
+    "    * 输入文件格式\n",
+    "    ```json\n",
+    "    {\"Make\":\"Honda\",\"Model\":\"Pilot\",\"RetailValue\":32145.0,\"Stock\":4}\n",
+    "{\"Make\":\"Honda\",\"Model\":\"Civic\",\"RetailValue\":19575.0,\"Stock\":11}\n",
+    "{\"Make\":\"Honda\",\"Model\":\"Ridgeline\",\"RetailValue\":42870.0,\"Stock\":2}\n",
+    "{\"Make\":\"Jeep\",\"Model\":\"Cherokee\",\"RetailValue\":23595.0,\"Stock\":13}\n",
+    "{\"Make\":\"Jeep\",\"Model\":\"Wrangler\",\"RetailValue\":27895.0,\"Stock\":4}\n",
+    "{\"Make\":\"Volkswagen\",\"Model\":\"Passat\",\"RetailValue\":22440.0,\"Stock\":2}\n",
+    "    ```\n",
+    "    * 使用UDAF\n",
+    "    ```scala\n",
+    "      // 定义SparkSQL UDAF逻辑\n",
+    "      private class SumProductAggregateFunction extends UserDefinedAggregateFunction {\n",
+    "        // 定义UDF输入schema: (Double price, Long quantity)\n",
+    "        def inputSchema: StructType = new StructType().add(\"price\", DoubleType).add(\"quantity\", LongType)\n",
+    "        // 定义输出schema: Output = (Double total)\n",
+    "        def bufferSchema: StructType = new StructType().add(\"total\", DoubleType)\n",
+    "\n",
+    "        def dataType: DataType = DoubleType\n",
+    "        def deterministic: Boolean = true // true: our UDAF's output given an input is deterministic\n",
+    "\n",
+    "        def initialize(buffer: MutableAggregationBuffer): Unit = {\n",
+    "          buffer.update(0, 0.0)           // 初始化 result to 0.0\n",
+    "        }\n",
+    "\n",
+    "        def update(buffer: MutableAggregationBuffer, input: Row): Unit = {\n",
+    "          val sum   = buffer.getDouble(0) // Intermediate result to be updated\n",
+    "          val price = input.getDouble(0)  // First input parameter\n",
+    "          val qty   = input.getLong(1)    // Second input parameter\n",
+    "          buffer.update(0, sum + (price * qty))   // Update the intermediate result\n",
+    "        }\n",
+    "        // Merge intermediate result sums by adding them\n",
+    "        def merge(buffer1: MutableAggregationBuffer, buffer2: Row): Unit = {\n",
+    "          buffer1.update(0, buffer1.getDouble(0) + buffer2.getDouble(0))\n",
+    "        }\n",
+    "        // THe final result will be contained in 'buffer'\n",
+    "        def evaluate(buffer: Row): Any = {\n",
+    "          buffer.getDouble(0)\n",
+    "        }\n",
+    "      }\n",
+    "\n",
+    "      def main (args: Array[String]) {\n",
+    "        val conf       = new SparkConf().setAppName(\"Scala UDAF Example\")\n",
+    "        val sc         = new SparkContext(conf)\n",
+    "        val sqlContext = new SQLContext(sc)\n",
+    "\n",
+    "        val testDF = sqlContext.read.json(\"inventory.json\")\n",
+    "        testDF.registerTempTable(\"inventory\") \n",
+    "        // 注册UDAF到SQLContext\n",
+    "        sqlContext.udf.register(\"SUMPRODUCT\", new SumProductAggregateFunction)\n",
+    "        sqlContext.sql(\"SELECT Make, SUMPRODUCT(RetailValue,Stock) AS InventoryValuePerMake FROM inventory GROUP BY Make\").show()\n",
+    "      }\n",
+    "   \n",
+    "    ```"
    ]
   }
  ],
