--- a/Java Topic/howto_read_sourceCode/如何看源码.ipynb
+++ b/Java Topic/howto_read_sourceCode/如何看源码.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Intelij Idea快捷键\n",
     "#### 1. 关闭输入法的快捷键\n",
     "<img src=\"img/inputshutdown.png\" width=\"60%\">\n",
     "\n",
@@ -26,6 +27,22 @@
     "7. 某些类属性或方法内的变量是怎么被修改的, 可以从Analyse视图查看\n",
     "<img src=\"img/analysefield.png\" width=\"40%\">\n",
     "8. `CTRL+ALT+H` : 以面板方式, 查看某个方法的调用链"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## UML图\n",
+    "\n",
+    "#### 1. 活动图\n",
+    "<img src=\"img/uml1.png\">\n",
+    "\n",
+    "<img src=\"img/uml2.png\" width=\"90%\">\n",
+    "\n",
+    "\n",
+    "#### 2. 顺序图(序列图, 时序图)\n",
+    "<img src=\"img/uml3.png\" width=\"80%\">"
    ]
   }
  ],
